--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 						<div id="logo">
 							<span class="image avatar48"><img src="images/profile.jpg" alt="" /></span>
 							<h1 id="title">Supratik Sarkar</h1>
-							<p>Product Manager</p>
+							<p>Software Engineer</p>
 						</div>
 
 					<!-- Nav -->
@@ -44,7 +44,7 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt">Hi! I'm <strong>Supratik Sarkar</strong>, a Product Manager</a><br /></h2>
+								<h2 class="alt">Hi! I'm <strong>Supratik Sarkar</strong>, a Software Engineer</a><br /></h2>
 							</header>
 
 							<footer>
