--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
 				<!-- Copyright -->
 					<ul class="copyright">
-                        <li><strong>Email: supratiksarkaremped@gmail.com</strong></li><li><strong>Contact: +917077100461</strong></li>
+                        <li><strong>Email: supratikssarkar@gmail.com</strong></li><li><strong>Contact: +917077100461</strong></li>
 					</ul>
 
 			</div>
